src/cml_parser/antlr/CMLParser.py
# Generated from CML.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CMLParser ( Parser ):

    grammarFileName = "CML.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'import'", "'ContextMap'", "'{'", "'}'", 
                     "'type'", "'='", "'state'", "'contains'", "'realizes'", 
                     "'SYSTEM_LANDSCAPE'", "'ORGANIZATIONAL'", "'AS_IS'", 
                     "'TO_BE'", "':'", "'Customer-Supplier'", "'Upstream-Downstream'", 
                     "'Downstream-Upstream'", "'Partnership'", "'Shared-Kernel'", 
                     "'['", "','", "']'", "'ACL'", "'CF'", "'OHS'", "'PL'", 
                     "'SK'", "'U'", "'D'", "'S'", "'C'", "'P'", "'<->'", 
                     "'<-'", "'->'", "'implementationTechnology'", "'downstreamRights'", 
                     "'exposedAggregates'", "'VETO_RIGHT'", "'INFLUENCER'", 
                     "'BoundedContext'", "'implements'", "'domainVisionStatement'", 
                     "'responsibilities'", "'knowledgeLevel'", "'FEATURE'", 
                     "'SYSTEM'", "'APPLICATION'", "'TEAM'", "'CONCRETE'", 
                     "'ABSTRACT'", "'Domain'", "'Subdomain'", "'CORE_DOMAIN'", 
                     "'SUPPORTING_DOMAIN'", "'GENERIC_SUBDOMAIN'", "'Module'", 
                     "'Aggregate'", "'abstract'", "'Entity'", "'extends'", 
                     "'@'", "'aggregateRoot'", "'ValueObject'", "'DomainEvent'", 
                     "'persistent'", "'CommandEvent'", "'DataTransferObject'", 
                     "'enum'", "'aggregateLifecycle'", "';'", "'-'", "'key'", 
                     "'def'", "'*'", "'('", "')'", "'throws'", "'read-only'", 
                     "'write'", "'publish'", "'subscribe'", "'to'", "'owner'", 
                     "'basePackage'", "'<'", "'>'", "'List'", "'Set'", "'Bag'", 
                     "'Collection'", "'Service'", "'Repository'", "'public'", 
                     "'private'", "'protected'", "'Application'", "'Command'", 
                     "'Flow'", "'command'", "'event'", "'triggers'", "'operation'", 
                     "'delegates'", "'emits'", "'Coordination'", "'::'", 
                     "'X'", "'+'", "'O'", "'UseCase'", "'actor'", "'interactions'", 
                     "'UserStory'", "'As'", "'a'", "'an'", "'I'", "'want'", 
                     "'do'", "'so'", "'that'", "'benefit'", "'scope'", "'level'", 
                     "'Stakeholders'", "'of'", "'StakeholderGroup'", "'Stakeholder'", 
                     "'influence'", "'interest'", "'priority'", "'impact'", 
                     "'consequences'", "'good'", "'bad'", "'action'", "'ValueRegister'", 
                     "'for'", "'ValueCluster'", "'core'", "'demonstrator'", 
                     "'Value'", "'isCore'", "'.'", "'read'", "'with'", "'its'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "READ", "WITH", "ITS", "ID", 
                      "STRING", "COMMENT", "BLOCK_COMMENT", "WS" ]

    RULE_definitions = 0
    RULE_imports = 1
    RULE_topLevel = 2
    RULE_contextMap = 3
    RULE_contextMapSetting = 4
    RULE_contextMapType = 5
    RULE_contextMapState = 6
    RULE_relationship = 7
    RULE_relationshipConnection = 8
    RULE_relationshipEndpoint = 9
    RULE_relationshipKeyword = 10
    RULE_relationshipRoles = 11
    RULE_relationshipRole = 12
    RULE_relationshipArrow = 13
    RULE_relationshipAttribute = 14
    RULE_downstreamRights = 15
    RULE_boundedContext = 16
    RULE_boundedContextAttribute = 17
    RULE_boundedContextType = 18
    RULE_knowledgeLevel = 19
    RULE_domain = 20
    RULE_subdomain = 21
    RULE_subdomainType = 22
    RULE_module = 23
    RULE_aggregate = 24
    RULE_domainObject = 25
    RULE_simpleDomainObjectOrEnum = 26
    RULE_simpleDomainObject = 27
    RULE_entity = 28
    RULE_entityBody = 29
    RULE_valueObject = 30
    RULE_valueObjectBody = 31
    RULE_domainEvent = 32
    RULE_domainEventBody = 33
    RULE_commandEvent = 34
    RULE_commandEventBody = 35
    RULE_dataTransferObject = 36
    RULE_dtoBody = 37
    RULE_enumDecl = 38
    RULE_feature = 39
    RULE_attribute = 40
    RULE_operation = 41
    RULE_operationHint = 42
    RULE_operationHintType = 43
    RULE_operationTail = 44
    RULE_contentBlock = 45
    RULE_contentEntry = 46
    RULE_subdomainAttribute = 47
    RULE_contentItem = 48
    RULE_ownerDecl = 49
    RULE_setting = 50
    RULE_parameter = 51
    RULE_parameterList = 52
    RULE_type = 53
    RULE_collectionType = 54
    RULE_service = 55
    RULE_repository = 56
    RULE_repositoryBody = 57
    RULE_repositoryMethod = 58
    RULE_visibility = 59
    RULE_genericBody = 60
    RULE_application = 61
    RULE_applicationElement = 62
    RULE_commandDecl = 63
    RULE_flow = 64
    RULE_flowStep = 65
    RULE_flowCommandStep = 66
    RULE_flowCommandTail = 67
    RULE_flowEventStep = 68
    RULE_flowEventTriggerList = 69
    RULE_flowOperationStep = 70
    RULE_flowOperationTail = 71
    RULE_flowDelegate = 72
    RULE_flowInvocationList = 73
    RULE_flowInvocationConnector = 74
    RULE_flowInvocation = 75
    RULE_flowInvocationKind = 76
    RULE_flowEmitsClause = 77
    RULE_flowEventList = 78
    RULE_coordination = 79
    RULE_coordinationStep = 80
    RULE_coordinationPath = 81
    RULE_stateTransition = 82
    RULE_transitionOperator = 83
    RULE_useCase = 84
    RULE_useCaseBody = 85
    RULE_useCaseActor = 86
    RULE_useCaseInteractionsBlock = 87
    RULE_useCaseInteractionItem = 88
    RULE_useCaseInteractionId = 89
    RULE_useCaseReadOperation = 90
    RULE_useCaseFreeText = 91
    RULE_userStory = 92
    RULE_userStoryBody = 93
    RULE_userStoryLine = 94
    RULE_name = 95
    RULE_useCaseBenefit = 96
    RULE_useCaseScope = 97
    RULE_useCaseLevel = 98
    RULE_stakeholderSection = 99
    RULE_stakeholderItem = 100
    RULE_stakeholderGroup = 101
    RULE_stakeholder = 102
    RULE_stakeholderAttribute = 103
    RULE_consequences = 104
    RULE_consequenceItem = 105
    RULE_valueRegister = 106
    RULE_valueCluster = 107
    RULE_valueClusterAttribute = 108
    RULE_value = 109
    RULE_valueAttribute = 110
    RULE_valueStakeholder = 111
    RULE_rawStatement = 112
    RULE_idList = 113
    RULE_qualifiedName = 114

    ruleNames =  [ "definitions", "imports", "topLevel", "contextMap", "contextMapSetting", 
                   "contextMapType", "contextMapState", "relationship", 
                   "relationshipConnection", "relationshipEndpoint", "relationshipKeyword", 
                   "relationshipRoles", "relationshipRole", "relationshipArrow", 
                   "relationshipAttribute", "downstreamRights", "boundedContext", 
                   "boundedContextAttribute", "boundedContextType", "knowledgeLevel", 
                   "domain", "subdomain", "subdomainType", "module", "aggregate", 
                   "domainObject", "simpleDomainObjectOrEnum", "simpleDomainObject", 
                   "entity", "entityBody", "valueObject", "valueObjectBody", 
                   "domainEvent", "domainEventBody", "commandEvent", "commandEventBody", 
                   "dataTransferObject", "dtoBody", "enumDecl", "feature", 
                   "attribute", "operation", "operationHint", "operationHintType", 
                   "operationTail", "contentBlock", "contentEntry", "subdomainAttribute", 
                   "contentItem", "ownerDecl", "setting", "parameter", "parameterList", 
                   "type", "collectionType", "service", "repository", "repositoryBody", 
                   "repositoryMethod", "visibility", "genericBody", "application", 
                   "applicationElement", "commandDecl", "flow", "flowStep", 
                   "flowCommandStep", "flowCommandTail", "flowEventStep", 
                   "flowEventTriggerList", "flowOperationStep", "flowOperationTail", 
                   "flowDelegate", "flowInvocationList", "flowInvocationConnector", 
                   "flowInvocation", "flowInvocationKind", "flowEmitsClause", 
                   "flowEventList", "coordination", "coordinationStep", 
                   "coordinationPath", "stateTransition", "transitionOperator", 
                   "useCase", "useCaseBody", "useCaseActor", "useCaseInteractionsBlock", 
                   "useCaseInteractionItem", "useCaseInteractionId", "useCaseReadOperation", 
                   "useCaseFreeText", "userStory", "userStoryBody", "userStoryLine", 
                   "name", "useCaseBenefit", "useCaseScope", "useCaseLevel", 
                   "stakeholderSection", "stakeholderItem", "stakeholderGroup", 
                   "stakeholder", "stakeholderAttribute", "consequences", 
                   "consequenceItem", "valueRegister", "valueCluster", "valueClusterAttribute", 
                   "value", "valueAttribute", "valueStakeholder", "rawStatement", 
                   "idList", "qualifiedName" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    T__63=64
    T__64=65
    T__65=66
    T__66=67
    T__67=68
    T__68=69
    T__69=70
    T__70=71
    T__71=72
    T__72=73
    T__73=74
    T__74=75
    T__75=76
    T__76=77
    T__77=78
    T__78=79
    T__79=80
    T__80=81
    T__81=82
    T__82=83
    T__83=84
    T__84=85
    T__85=86
    T__86=87
    T__87=88
    T__88=89
    T__89=90
    T__90=91
    T__91=92
    T__92=93
    T__93=94
    T__94=95
    T__95=96
    T__96=97
    T__97=98
    T__98=99
    T__99=100
    T__100=101
    T__101=102
    T__102=103
    T__103=104
    T__104=105
    T__105=106
    T__106=107
    T__107=108
    T__108=109
    T__109=110
    T__110=111
    T__111=112
    T__112=113
    T__113=114
    T__114=115
    T__115=116
    T__116=117
    T__117=118
    T__118=119
    T__119=120
    T__120=121
    T__121=122
    T__122=123
    T__123=124
    T__124=125
    T__125=126
    T__126=127
    T__127=128
    T__128=129
    T__129=130
    T__130=131
    T__131=132
    T__132=133
    T__133=134
    T__134=135
    T__135=136
    T__136=137
    T__137=138
    T__138=139
    T__139=140
    T__140=141
    T__141=142
    T__142=143
    T__143=144
    T__144=145
    READ=146
    WITH=147
    ITS=148
    ID=149
    STRING=150
    COMMENT=151
    BLOCK_COMMENT=152
    WS=153

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class DefinitionsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CMLParser.EOF, 0)

        def imports(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CMLParser.ImportsContext)
            else:
                return self.getTypedRuleContext(CMLParser.ImportsContext,i)


        def topLevel(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CMLParser.TopLevelContext)
            else:
                return self.getTypedRuleContext(CMLParser.TopLevelContext,i)


        def getRuleIndex(self):
            return CMLParser.RULE_definitions

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefinitions" ):
                listener.enterDefinitions(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefinitions" ):
                listener.exitDefinitions(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefinitions" ):
                return visitor.visitDefinitions(self)
            else:
                return visitor.visitChildren(self)




    def definitions(self):

        localctx = CMLParser.DefinitionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_definitions)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 234
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4505798650626054) != 0) or ((((_la - 111)) & ~0x3f) == 0 and ((1 << (_la - 111)) & 134250505) != 0):
                self.state = 232
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [1]:
                    self.state = 230
                    self.imports()
                    pass
                elif token in [2, 41, 52, 111, 114, 126, 138]:
                    self.state = 231
                    self.topLevel()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 236
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 237
            self.match(CMLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(CMLParser.STRING, 0)

        def getRuleIndex(self):
            return CMLParser.RULE_imports

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImports" ):
                listener.enterImports(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImports" ):
                listener.exitImports(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImports" ):
                return visitor.visitImports(self)
            else:
                return visitor.visitChildren(self)




    def imports(self):

        localctx = CMLParser.ImportsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_imports)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 239
            self.match(CMLParser.T__0)
            self.state = 240
            self.match(CMLParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TopLevelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def contextMap(self):
            return self.getTypedRuleContext(CMLParser.ContextMapContext,0)


        def boundedContext(self):
            return self.getTypedRuleContext(CMLParser.BoundedContextContext,0)


        def domain(self):
            return self.getTypedRuleContext(CMLParser.DomainContext,0)


        def useCase(self):
            return self.getTypedRuleContext(CMLParser.UseCaseContext,0)


        def stakeholderSection(self):
            return self.getTypedRuleContext(CMLParser.StakeholderSectionContext,0)


        def valueRegister(self):
            return self.getTypedRuleContext(CMLParser.ValueRegisterContext,0)


        def userStory(self):
            return self.getTypedRuleContext(CMLParser.UserStoryContext,0)


        def getRuleIndex(self):
            return CMLParser.RULE_topLevel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTopLevel" ):
                listener.enterTopLevel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTopLevel" ):
                listener.exitTopLevel(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTopLevel" ):
                return visitor.visitTopLevel(self)
            else:
                return visitor.visitChildren(self)




    def topLevel(self):

        localctx = CMLParser.TopLevelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_topLevel)
        try:
            self.state = 249
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 242
                self.contextMap()
                pass
            elif token in [41]:
                self.enterOuterAlt(localctx, 2)
                self.state = 243
                self.boundedContext()
                pass
            elif token in [52]:
                self.enterOuterAlt(localctx, 3)
                self.state = 244
                self.domain()
                pass
            elif token in [111]:
                self.enterOuterAlt(localctx, 4)
                self.state = 245
                self.useCase()
                pass
            elif token in [126]:
                self.enterOuterAlt(localctx, 5)
                self.state = 246
                self.stakeholderSection()
                pass
            elif token in [138]:
                self.enterOuterAlt(localctx, 6)
                self.state = 247
                self.valueRegister()
                pass
            elif token in [114]:
                self.enterOuterAlt(localctx, 7)
                self.state = 248
                self.userStory()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ContextMapContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(CMLParser.NameContext,0)


        def contextMapSetting(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CMLParser.ContextMapSettingContext)
            else:
                return self.getTypedRuleContext(CMLParser.ContextMapSettingContext,i)


        def relationship(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CMLParser.RelationshipContext)
            else:
                return self.getTypedRuleContext(CMLParser.RelationshipContext,i)


        def getRuleIndex(self):
            return CMLParser.RULE_contextMap

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContextMap" ):
                listener.enterContextMap(self)
